# telegram-transcriber

./: README.md
.github/workflows/: ci-rust.yml  ci.yml
python/: .gitignore  README.md  main.py  requirements.txt  test_transcription.py  whisper.py
python/full_python_bot/: README.md  bot.py  whisper.py
rust/: .gitignore  Cargo.toml  README.md
rust/src/: log_conf.rs  main.rs  voice_file.rs  worker.rs
