[package]
name = "telegram-transcriber"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/AntoniosBarotsis/telegram-transcriber"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
openssl-vendored = ["dep:openssl"]

[dependencies]
dotenvy = "0.15.7"
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.81"
reqwest = { version = "0.12.3", default-features = false, features = ["multipart", "blocking", "default-tls"] }
openssl = { version = "0.10", optional = true, features = ["vendored"] }
env_logger = { version = "0.11.3" }
